backpack/src/logging/tests/progress/snapshots/log_rs__logging__tests__progress__progress_api__progress_behavior_tests__progress_finish_message_parameter_is_used_snapshot.snap
---
source: backpack/src/logging/tests/progress/progress_api.rs
expression: out
---
[34m●[0m  ℹ Task
[38;5;8m│[0m  
[34m●[0m  ℹ This message is ignored
[38;5;8m│[0m  
[34m●[0m  ℹ done
[38;5;8m│[0m
