backpack/src/logging/tests/progress/snapshots/log_rs__logging__tests__progress__progress_api__progress_behavior_tests__progress_full_workflow_with_total_snapshot.snap
---
source: backpack/src/logging/tests/progress/progress_api.rs
expression: out
---
[38;5;8m┌[0m  → Downloading
[38;5;8m│[0m
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m78[0m[2m:[0m → Downloading
[32m◇[0m  ⠿ Downloading: 1/5
[38;5;8m│[0m  
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m180[0m[2m:[0m ⠿ Downloading: 1/5
[32m◇[0m  ⠿ Downloading: 2/5
[38;5;8m│[0m  
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m180[0m[2m:[0m ⠿ Downloading: 2/5
[32m◇[0m  ⠿ Downloading: 3/5
[38;5;8m│[0m  
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m180[0m[2m:[0m ⠿ Downloading: 3/5
[32m◇[0m  ⠿ Downloading: 5/5
[38;5;8m│[0m  
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m180[0m[2m:[0m ⠿ Downloading: 5/5
[38;5;8m└[0m  ✔ Download complete (took 10ms)
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m131[0m[2m:[0m ✔ Download complete (took 10ms)
