backpack/src/logging/tests/progress/snapshots/log_rs__logging__tests__progress__progress_api__progress_behavior_tests__progress_labels_with_special_characters_snapshot.snap
---
source: backpack/src/logging/tests/progress/progress_api.rs
expression: out
---
[38;5;8m┌[0m  → Download: file-123.txt [50MB]
[38;5;8m│[0m
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m78[0m[2m:[0m → Download: file-123.txt [50MB]
[32m◇[0m  ⠿ Download: file-123.txt [50MB]: 1
[38;5;8m│[0m  
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m180[0m[2m:[0m ⠿ Download: file-123.txt [50MB]: 1
