backpack/src/logging/tests/progress/snapshots/log_rs__logging__tests__progress__progress_api__progress_behavior_tests__progress_tick_after_update_continues_from_updated_value_snapshot.snap
---
source: backpack/src/logging/tests/progress/progress_api.rs
expression: out
---
[38;5;8m┌[0m  → Syncing
[38;5;8m│[0m
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m78[0m[2m:[0m → Syncing
[32m◇[0m  ⠿ Syncing: 5/10
[38;5;8m│[0m  
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m180[0m[2m:[0m ⠿ Syncing: 5/10
[32m◇[0m  ⠿ Syncing: 6/10
[38;5;8m│[0m  
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m180[0m[2m:[0m ⠿ Syncing: 6/10
[32m◇[0m  ⠿ Syncing: 7/10
[38;5;8m│[0m  
[32m INFO[0m [2mbackpack/src/logging/printers/mod.rs[0m[2m:[0m[2m180[0m[2m:[0m ⠿ Syncing: 7/10
