backpack/src/logging/tests/progress/snapshots/log_rs__logging__tests__progress__progress_api__progress_behavior_tests__progress_tick_without_total_shows_count_only_snapshot.snap
---
source: backpack/src/logging/tests/progress/progress_api.rs
expression: out
---
[34m●[0m  ℹ Loading
[38;5;8m│[0m  
[34m●[0m  ℹ Loading
[38;5;8m│[0m  
[34m●[0m  ℹ Loading
[38;5;8m│[0m  
[34m●[0m  ℹ Loading
[38;5;8m│[0m
